--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">17</td><td class="num">0</td><td class="num attn">2</td><td class="num">-338,565</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">17</td><td class="num">0</td><td class="num attn">1</td><td class="num">258,054</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">smokeTest.ValidateSmokeTest</td><td><a href="#m0">ValidateAccountSettings</a></td><td rowspan="1">1542605817843</td><td rowspan="1">22282</td></tr><tr class="failedeven"><td><a href="#m1">ValidateAddressPage</a></td><td rowspan="1">1542605866812</td><td rowspan="1">16801</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="17">smokeTest.ValidateSmokeTest</td><td><a href="#m2">ValidateCatalogRestriction</a></td><td rowspan="1">1542605840125</td><td rowspan="1">13103</td></tr><tr class="passedeven"><td><a href="#m3">ValidateChangePassword</a></td><td rowspan="1">1542605797912</td><td rowspan="1">19913</td></tr><tr class="passedeven"><td><a href="#m4">ValidateDomainLink</a></td><td rowspan="1">1542605853228</td><td rowspan="1">13584</td></tr><tr class="passedeven"><td><a href="#m5">ValidateEditProfile</a></td><td rowspan="1">1542605783233</td><td rowspan="1">14661</td></tr><tr class="passedeven"><td><a href="#m6">ValidateForgetPswd</a></td><td rowspan="1">1542605298050</td><td rowspan="1">19131</td></tr><tr class="passedeven"><td><a href="#m7">ValidateInsightTab</a></td><td rowspan="1">1542605735551</td><td rowspan="1">4018</td></tr><tr class="passedeven"><td><a href="#m8">ValidateInviteTab</a></td><td rowspan="1">1542605275701</td><td rowspan="1">7229</td></tr><tr class="passedeven"><td><a href="#m9">ValidateLogin</a></td><td rowspan="1">1542605670112</td><td rowspan="1">49458</td></tr><tr class="passedeven"><td><a href="#m10">ValidateLogo</a></td><td rowspan="1">1542605758270</td><td rowspan="1">3225</td></tr><tr class="passedeven"><td><a href="#m11">ValidateLogout</a></td><td rowspan="1">1542605282930</td><td rowspan="1">15102</td></tr><tr class="passedeven"><td><a href="#m12">ValidateManageTab</a></td><td rowspan="1">1542605724176</td><td rowspan="1">11375</td></tr><tr class="passedeven"><td><a href="#m13">ValidateMarkITPlacePage</a></td><td rowspan="1">1542605719570</td><td rowspan="1">4587</td></tr><tr class="passedeven"><td><a href="#m14">ValidateMyProfile</a></td><td rowspan="1">1542605761495</td><td rowspan="1">21738</td></tr><tr class="passedeven"><td><a href="#m15">ValidateNotificationPage</a></td><td rowspan="1">1542605739589</td><td rowspan="1">18678</td></tr><tr class="passedeven"><td><a href="#m16">ValidateRegPage</a></td><td rowspan="1">1542605317181</td><td rowspan="1">14172</td></tr><tr class="passedeven"><td><a href="#m17">ValidateRequestTab</a></td><td rowspan="1">1542605268473</td><td rowspan="1">7228</td></tr><tr class="passedeven"><td><a href="#m18">ValidateUsersPage</a></td><td rowspan="1">1542605883613</td><td rowspan="1">-615140</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">smokeTest.ValidateSmokeTest</td><td><a href="#m0">ValidateAddressPage</a></td><td rowspan="1">1542605746614</td><td rowspan="1">37783</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="17">smokeTest.ValidateSmokeTest</td><td><a href="#m1">ValidateCatalogRestriction</a></td><td rowspan="1">1542605721972</td><td rowspan="1">12009</td></tr><tr class="passedeven"><td><a href="#m2">ValidateChangePassword</a></td><td rowspan="1">1542605703792</td><td rowspan="1">18161</td></tr><tr class="passedeven"><td><a href="#m3">ValidateDomainLink</a></td><td rowspan="1">1542605733981</td><td rowspan="1">12633</td></tr><tr class="passedeven"><td><a href="#m4">ValidateEditProfile</a></td><td rowspan="1">1542605686747</td><td rowspan="1">17043</td></tr><tr class="passedeven"><td><a href="#m5">ValidateForgetPswd</a></td><td rowspan="1">1542605817623</td><td rowspan="1">9564</td></tr><tr class="passedeven"><td><a href="#m6">ValidateInsightTab</a></td><td rowspan="1">1542605638814</td><td rowspan="1">3979</td></tr><tr class="passedeven"><td><a href="#m7">ValidateInviteTab</a></td><td rowspan="1">1542605810313</td><td rowspan="1">2251</td></tr><tr class="passedeven"><td><a href="#m8">ValidateLogin</a></td><td rowspan="1">1542605583558</td><td rowspan="1">44962</td></tr><tr class="passedeven"><td><a href="#m9">ValidateLogo</a></td><td rowspan="1">1542605663802</td><td rowspan="1">3361</td></tr><tr class="passedeven"><td><a href="#m10">ValidateLogout</a></td><td rowspan="1">1542605812564</td><td rowspan="1">5042</td></tr><tr class="passedeven"><td><a href="#m11">ValidateManageTab</a></td><td rowspan="1">1542605631767</td><td rowspan="1">7027</td></tr><tr class="passedeven"><td><a href="#m12">ValidateMarkITPlacePage</a></td><td rowspan="1">1542605628520</td><td rowspan="1">3230</td></tr><tr class="passedeven"><td><a href="#m13">ValidateMyProfile</a></td><td rowspan="1">1542605667163</td><td rowspan="1">19584</td></tr><tr class="passedeven"><td><a href="#m14">ValidateNotificationPage</a></td><td rowspan="1">1542605642793</td><td rowspan="1">21009</td></tr><tr class="passedeven"><td><a href="#m15">ValidateRegPage</a></td><td rowspan="1">1542605827187</td><td rowspan="1">11999</td></tr><tr class="passedeven"><td><a href="#m16">ValidateRequestTab</a></td><td rowspan="1">1542605808067</td><td rowspan="1">2246</td></tr><tr class="passedeven"><td><a href="#m17">ValidateUsersPage</a></td><td rowspan="1">1542605784397</td><td rowspan="1">23670</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">smokeTest.ValidateSmokeTest#ValidateAccountSettings</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User not able to click on the Account Setting from the header expected [true] but found [false]
+<h2>Default test</h2><h3 id="m0">smokeTest.ValidateSmokeTest#ValidateAddressPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Address of Use heading is present on the Address Page expected [true] but found [false]
 	at org.testng.Assert.fail(Assert.java:96)
 	at org.testng.Assert.failNotEquals(Assert.java:776)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:137)
 	at org.testng.Assert.assertEquals(Assert.java:118)
 	at org.testng.Assert.assertEquals(Assert.java:568)
-	at smokeTest.ValidateSmokeTest.ValidateAccountSettings(ValidateSmokeTest.java:560)
+	at smokeTest.ValidateSmokeTest.ValidateAddressPage(ValidateSmokeTest.java:773)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -46,55 +46,22 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">smokeTest.ValidateSmokeTest#ValidateAddressPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User not being able to reach Address of Use Page expected [Address Of Use - CCP] but found [Address of Use - CCP]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:137)
-	at org.testng.Assert.assertEquals(Assert.java:118)
-	at org.testng.Assert.assertEquals(Assert.java:453)
-	at smokeTest.ValidateSmokeTest.ValidateAddressPage(ValidateSmokeTest.java:757)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:571)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:707)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:979)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1116)
-	at org.testng.TestNG.runSuites(TestNG.java:1028)
-	at org.testng.TestNG.run(TestNG.java:996)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">smokeTest.ValidateSmokeTest#ValidateCatalogRestriction</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">smokeTest.ValidateSmokeTest#ValidateChangePassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">smokeTest.ValidateSmokeTest#ValidateDomainLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">smokeTest.ValidateSmokeTest#ValidateEditProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">smokeTest.ValidateSmokeTest#ValidateForgetPswd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">smokeTest.ValidateSmokeTest#ValidateInsightTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">smokeTest.ValidateSmokeTest#ValidateInviteTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">smokeTest.ValidateSmokeTest#ValidateLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">smokeTest.ValidateSmokeTest#ValidateLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m11">smokeTest.ValidateSmokeTest#ValidateLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m12">smokeTest.ValidateSmokeTest#ValidateManageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m13">smokeTest.ValidateSmokeTest#ValidateMarkITPlacePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m14">smokeTest.ValidateSmokeTest#ValidateMyProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m15">smokeTest.ValidateSmokeTest#ValidateNotificationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m16">smokeTest.ValidateSmokeTest#ValidateRegPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m17">smokeTest.ValidateSmokeTest#ValidateRequestTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m18">smokeTest.ValidateSmokeTest#ValidateUsersPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">smokeTest.ValidateSmokeTest#ValidateCatalogRestriction</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">smokeTest.ValidateSmokeTest#ValidateChangePassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">smokeTest.ValidateSmokeTest#ValidateDomainLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">smokeTest.ValidateSmokeTest#ValidateEditProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">smokeTest.ValidateSmokeTest#ValidateForgetPswd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">smokeTest.ValidateSmokeTest#ValidateInsightTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">smokeTest.ValidateSmokeTest#ValidateInviteTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">smokeTest.ValidateSmokeTest#ValidateLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">smokeTest.ValidateSmokeTest#ValidateLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">smokeTest.ValidateSmokeTest#ValidateLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">smokeTest.ValidateSmokeTest#ValidateManageTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">smokeTest.ValidateSmokeTest#ValidateMarkITPlacePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">smokeTest.ValidateSmokeTest#ValidateMyProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">smokeTest.ValidateSmokeTest#ValidateNotificationPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">smokeTest.ValidateSmokeTest#ValidateRegPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m16">smokeTest.ValidateSmokeTest#ValidateRequestTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m17">smokeTest.ValidateSmokeTest#ValidateUsersPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
