--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,11 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateRegPage</td>
+<td>ValidateAccountSettings</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateAccountSettings</td>
+<td>ValidateRegPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -32,6 +32,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>ValidateMyProfile</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateManagementLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -56,6 +60,10 @@
 <tr>
 <td>&nbsp;</td>
 <td>ValidateInviteTab</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateMngmntUsersTab</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
