--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,6 +1,23 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>smokeTest.ValidateSmokeTest.ValidateAccountSettings</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateDomainLink</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateChangePassword</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateRegPage</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateMarkITPlacePage</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateMyProfile</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateForgetPswd</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateLogo</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateCatalogRestriction</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateAddressPage</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateInviteTab</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateRequestTab</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateEditProfile</td></tr>
 <tr><td>smokeTest.ValidateSmokeTest.ValidateSetNotifications</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateUsersPage</td></tr>
 <tr><td>smokeTest.ValidateSmokeTest.ValidateLoginUser</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateManageTab</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateInsightTab</td></tr>
 <tr><td>smokeTest.ValidateSmokeTest.ValidateMyAccountList</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateNotificationPage</td></tr>
+<tr><td>smokeTest.ValidateSmokeTest.ValidateLogout</td></tr>
 </table>
