--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,42 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:55:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogin</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:55:57</td>   <td>45462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMarkITPlacePage()[pri:1, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateMarkITPlacePage</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:00</td>   <td>49271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManageTab()[pri:2, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateManageTab</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:10</td>   <td>58479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInsightTab()[pri:3, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateInsightTab</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:14</td>   <td>62912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateNotificationPage()[pri:4, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateNotificationPage</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:32</td>   <td>81085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogo()[pri:5, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogo</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:35</td>   <td>84339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfile()[pri:6, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateMyProfile</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:56:54</td>   <td>102781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateEditProfile()[pri:7, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateEditProfile</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:57:12</td>   <td>121346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateChangePassword()[pri:8, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateChangePassword</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:57:31</td>   <td>140382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCatalogRestriction()[pri:10, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateCatalogRestriction</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:57:43</td>   <td>151789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateDomainLink()[pri:11, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateDomainLink</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:57:57</td>   <td>165566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAddressPage()[pri:13, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateAddressPage</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:58:20</td>   <td>189435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateUsersPage()[pri:14, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateUsersPage</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:58:43</td>   <td>212302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRequestTab()[pri:15, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateRequestTab</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:58:46</td>   <td>214553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInviteTab()[pri:16, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateInviteTab</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:58:48</td>   <td>216768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogout()[pri:17, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateLogout</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:58:53</td>   <td>221872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateForgetPswd()[pri:18, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateForgetPswd</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:59:02</td>   <td>231314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRegPage()[pri:19, instance:smokeTest.ValidateSmokeTest@65466a6a]">ValidateRegPage</td> 
-  <td>main@1585635178</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/11/20 07:59:18</td>   <td>247345</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTest.ValidateSmokeTest@65466a6a]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1585635178</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/03 21:02:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogin</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/03 21:04:00</td>   <td>80869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManagementLogin()[pri:22, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateManagementLogin</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/03 21:04:45</td>   <td>125339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMngmntUsersTab()[pri:23, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMngmntUsersTab</td> 
+  <td>main@1664439369</td>   <td></td> </tr>
 </table>
