--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f3ddb1">  <td>18/12/03 21:02:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogin</td> 
-  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/12/03 21:04:00</td>   <td>80869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManagementLogin()[pri:22, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateManagementLogin</td> 
-  <td>main@1664439369</td>   <td></td> </tr>
-<tr bgcolor="f3ddb1">  <td>18/12/03 21:04:45</td>   <td>125339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMngmntUsersTab()[pri:23, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMngmntUsersTab</td> 
-  <td>main@1664439369</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:03:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogin</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:03:52</td>   <td>50771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMarkITPlacePage()[pri:1, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMarkITPlacePage</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:03:56</td>   <td>54293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManageTab()[pri:2, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateManageTab</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:04:14</td>   <td>72395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInsightTab()[pri:3, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateInsightTab</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:04:19</td>   <td>77709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateNotificationPage()[pri:4, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateNotificationPage</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:04:41</td>   <td>99942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogo()[pri:5, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogo</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:04:45</td>   <td>103206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfile()[pri:6, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMyProfile</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 14:05:14</td>   <td>132253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateEditProfile()[pri:7, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateEditProfile</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:41:31</td>   <td>-1290025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateChangePassword()[pri:8, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateChangePassword</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:41:52</td>   <td>-1269162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCatalogRestriction()[pri:10, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateCatalogRestriction</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:42:03</td>   <td>-1257947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateDomainLink()[pri:11, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateDomainLink</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:42:17</td>   <td>-1244649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAddressPage()[pri:13, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateAddressPage</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:42:40</td>   <td>-1221686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateUsersPage()[pri:14, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateUsersPage</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:04</td>   <td>-1197647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRequestTab()[pri:15, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateRequestTab</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:06</td>   <td>-1195426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateInviteTab()[pri:16, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateInviteTab</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:08</td>   <td>-1193207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogout()[pri:17, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateLogout</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:13</td>   <td>-1188113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateForgetPswd()[pri:18, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateForgetPswd</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:23</td>   <td>-1178696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRegPage()[pri:19, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateRegPage</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:43:43</td>   <td>-1158015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateManagementLogin()[pri:22, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateManagementLogin</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
+<tr bgcolor="f3ddb1">  <td>18/12/06 13:44:27</td>   <td>-1114780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMngmntUsersTab()[pri:23, instance:smokeTest.ValidateSmokeTest@4b5a5ed1]">ValidateMngmntUsersTab</td> 
+  <td>main@1219402581</td>   <td></td> </tr>
 </table>
