--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-928414001\testng-customsuite.xml</span>
+                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-128317735\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">20 methods,   20 passed</span>
+                    <span class="method-stats">23 methods,   23 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -168,6 +168,21 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateMarkITPlacePage">ValidateMarkITPlacePage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateMngmntAddRolesBtn">ValidateMngmntAddRolesBtn</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateMngmntEditRolesBtn">ValidateMngmntEditRolesBtn</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTest.ValidateSmokeTest" hash-for-method="ValidateMngmntRolesTab">ValidateMngmntRolesTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -318,6 +333,27 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="ValidateMngmntAddRolesBtn">
+                  </a> <!-- ValidateMngmntAddRolesBtn -->
+                  <span class="method-name">ValidateMngmntAddRolesBtn</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ValidateMngmntEditRolesBtn">
+                  </a> <!-- ValidateMngmntEditRolesBtn -->
+                  <span class="method-name">ValidateMngmntEditRolesBtn</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="ValidateMngmntRolesTab">
+                  </a> <!-- ValidateMngmntRolesTab -->
+                  <span class="method-name">ValidateMngmntRolesTab</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="ValidateMngmntUsersTab">
                   </a> <!-- ValidateMngmntUsersTab -->
                   <span class="method-name">ValidateMngmntUsersTab</span>
@@ -363,7 +399,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-928414001\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse-128317735\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -412,92 +448,104 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(20);
+data.addRows(23);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ValidateLogin')
 data.setCell(0, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(0, 3, 50749);
+data.setCell(0, 3, 21629);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'ValidateManagementLogin')
 data.setCell(1, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(1, 3, 43235);
+data.setCell(1, 3, 20164);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ValidateMngmntUsersTab')
+data.setCell(2, 1, 'ValidateAddressPage')
 data.setCell(2, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(2, 3, 31361);
+data.setCell(2, 3, 17048);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ValidateMyProfile')
+data.setCell(3, 1, 'ValidateUsersPage')
 data.setCell(3, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(3, 3, 29022);
+data.setCell(3, 3, 16737);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ValidateUsersPage')
+data.setCell(4, 1, 'ValidateMngmntUsersTab')
 data.setCell(4, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(4, 3, 24039);
+data.setCell(4, 3, 13824);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'ValidateAddressPage')
+data.setCell(5, 1, 'ValidateMngmntEditRolesBtn')
 data.setCell(5, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(5, 3, 22963);
+data.setCell(5, 3, 11670);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'ValidateNotificationPage')
+data.setCell(6, 1, 'ValidateChangePassword')
 data.setCell(6, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(6, 3, 22215);
+data.setCell(6, 3, 11659);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'ValidateChangePassword')
+data.setCell(7, 1, 'ValidateMyProfile')
 data.setCell(7, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(7, 3, 20863);
+data.setCell(7, 3, 11510);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'ValidateRegPage')
+data.setCell(8, 1, 'ValidateEditProfile')
 data.setCell(8, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(8, 3, 20680);
+data.setCell(8, 3, 10164);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'ValidateManageTab')
+data.setCell(9, 1, 'ValidateNotificationPage')
 data.setCell(9, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(9, 3, 18102);
+data.setCell(9, 3, 9847);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'ValidateDomainLink')
+data.setCell(10, 1, 'ValidateForgetPswd')
 data.setCell(10, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(10, 3, 13297);
+data.setCell(10, 3, 9736);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'ValidateCatalogRestriction')
+data.setCell(11, 1, 'ValidateMngmntAddRolesBtn')
 data.setCell(11, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(11, 3, 11215);
+data.setCell(11, 3, 9456);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'ValidateForgetPswd')
+data.setCell(12, 1, 'ValidateMngmntRolesTab')
 data.setCell(12, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(12, 3, 9417);
+data.setCell(12, 3, 9350);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'ValidateInsightTab')
+data.setCell(13, 1, 'ValidateCatalogRestriction')
 data.setCell(13, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(13, 3, 5314);
+data.setCell(13, 3, 9107);
 data.setCell(14, 0, 14)
-data.setCell(14, 1, 'ValidateLogout')
+data.setCell(14, 1, 'ValidateRegPage')
 data.setCell(14, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(14, 3, 5094);
+data.setCell(14, 3, 8351);
 data.setCell(15, 0, 15)
-data.setCell(15, 1, 'ValidateMarkITPlacePage')
+data.setCell(15, 1, 'ValidateDomainLink')
 data.setCell(15, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(15, 3, 3522);
+data.setCell(15, 3, 6926);
 data.setCell(16, 0, 16)
-data.setCell(16, 1, 'ValidateLogo')
+data.setCell(16, 1, 'ValidateLogout')
 data.setCell(16, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(16, 3, 3264);
+data.setCell(16, 3, 5105);
 data.setCell(17, 0, 17)
-data.setCell(17, 1, 'ValidateRequestTab')
+data.setCell(17, 1, 'ValidateManageTab')
 data.setCell(17, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(17, 3, 2221);
+data.setCell(17, 3, 4681);
 data.setCell(18, 0, 18)
-data.setCell(18, 1, 'ValidateInviteTab')
+data.setCell(18, 1, 'ValidateInsightTab')
 data.setCell(18, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(18, 3, 2219);
+data.setCell(18, 3, 4331);
 data.setCell(19, 0, 19)
-data.setCell(19, 1, 'ValidateEditProfile')
+data.setCell(19, 1, 'ValidateMarkITPlacePage')
 data.setCell(19, 2, 'smokeTest.ValidateSmokeTest')
-data.setCell(19, 3, -1422278);
+data.setCell(19, 3, 3251);
+data.setCell(20, 0, 20)
+data.setCell(20, 1, 'ValidateLogo')
+data.setCell(20, 2, 'smokeTest.ValidateSmokeTest')
+data.setCell(20, 3, 3084);
+data.setCell(21, 0, 21)
+data.setCell(21, 1, 'ValidateRequestTab')
+data.setCell(21, 2, 'smokeTest.ValidateSmokeTest')
+data.setCell(21, 3, 2256);
+data.setCell(22, 0, 22)
+data.setCell(22, 1, 'ValidateInviteTab')
+data.setCell(22, 2, 'smokeTest.ValidateSmokeTest')
+data.setCell(22, 3, 2184);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: -1083486 ms</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -538,84 +586,96 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">smokeTest.ValidateSmokeTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">ValidateChangePassword</span>
+                <span class="method-name">ValidateLogin</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">ValidateCatalogRestriction</span>
-                <span class="method-start">20863 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateDomainLink</span>
-                <span class="method-start">32078 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateAddressPage</span>
-                <span class="method-start">45376 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateUsersPage</span>
-                <span class="method-start">68339 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateRequestTab</span>
-                <span class="method-start">92378 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateInviteTab</span>
-                <span class="method-start">94599 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateLogout</span>
-                <span class="method-start">96818 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateForgetPswd</span>
-                <span class="method-start">101912 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateRegPage</span>
-                <span class="method-start">111329 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateManagementLogin</span>
-                <span class="method-start">132010 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateMngmntUsersTab</span>
-                <span class="method-start">175245 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateLogin</span>
-                <span class="method-start">1290025 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">ValidateMarkITPlacePage</span>
-                <span class="method-start">1340796 ms</span>
+                <span class="method-start">21647 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateManageTab</span>
-                <span class="method-start">1344318 ms</span>
+                <span class="method-start">24915 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateInsightTab</span>
-                <span class="method-start">1362420 ms</span>
+                <span class="method-start">29596 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateNotificationPage</span>
-                <span class="method-start">1367734 ms</span>
+                <span class="method-start">33927 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateLogo</span>
-                <span class="method-start">1389967 ms</span>
+                <span class="method-start">43793 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateMyProfile</span>
-                <span class="method-start">1393231 ms</span>
+                <span class="method-start">46877 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateEditProfile</span>
-                <span class="method-start">1422278 ms</span>
+                <span class="method-start">58408 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateChangePassword</span>
+                <span class="method-start">68591 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateCatalogRestriction</span>
+                <span class="method-start">80250 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateDomainLink</span>
+                <span class="method-start">89357 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateAddressPage</span>
+                <span class="method-start">96283 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateUsersPage</span>
+                <span class="method-start">113331 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateRequestTab</span>
+                <span class="method-start">130068 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateInviteTab</span>
+                <span class="method-start">132324 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateLogout</span>
+                <span class="method-start">134508 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateForgetPswd</span>
+                <span class="method-start">139613 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateRegPage</span>
+                <span class="method-start">149367 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateManagementLogin</span>
+                <span class="method-start">157719 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateMngmntUsersTab</span>
+                <span class="method-start">177884 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateMngmntRolesTab</span>
+                <span class="method-start">191708 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateMngmntAddRolesBtn</span>
+                <span class="method-start">201058 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">ValidateMngmntEditRolesBtn</span>
+                <span class="method-start">210514 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
